# protoml

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
protoml/: inference_engine.py  nlp_engine.py  vision_engine.py
src/protoml/: __main__.py  app.py  file_utils.py  reporting.py  tabular_engine.py  tracker.py  utils.py
tests/: test_file_reading.py  test_inference_engine.py  test_nlp_engine.py  test_reporting.py  test_tabular_engine.py  test_vision_analysis.py
