[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protoml"
version = "1.0.0"
description = "Zero-code ML prototyping dashboard: tabular, vision, NLP, Bayesian optimisation, XAI, and Gemini AI assistant."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ProtoML Contributors" }]
keywords = ["machine-learning", "dashboard", "streamlit", "automl", "nlp", "xai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies (always required)
dependencies = [
    "streamlit>=1.33.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.12.0",
    "tabulate>=0.9.0",
    "scikit-learn>=1.4.0",
    "scikit-optimize>=0.10.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
# Richer tabular classifiers
tabular-full = [
    "imbalanced-learn>=0.12.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
]

# Vision / GPU deep learning
vision = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
]

# Explainability (SHAP, LIME, ONNX export)
xai = [
    "shap>=0.44.0",
    "lime>=0.2.0.1",
]

# NLP extras
nlp = [
    "nltk>=3.8.0",
    "sentence-transformers>=2.6.0",
]

# Gemini AI assistant
ai = [
    "google-genai>=0.4.0",
]

# Everything at once
all = [
    "protoml-dashboard[tabular-full]",
    "protoml-dashboard[vision]",
    "protoml-dashboard[xai]",
    "protoml-dashboard[nlp]",
    "protoml-dashboard[ai]",
]

[project.scripts]
protoml = "protoml.__main__:main"

[project.urls]
"Bug Tracker" = "https://github.com/your-org/protoml-dashboard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/protoml"]
